--- a/mpmf-server/views/partials/prot-head.ejs
+++ b/mpmf-server/views/partials/prot-head.ejs
@@ -286,6 +286,7 @@
         let base_line_width;
         let box_width;
         let lineChartWidth;
+        let boxChartWidth;
         let ms2Height; // needed for ms2 line transitions
         let pressureHeight; // as above for pressure
         let currentRadius; // biggest circle
@@ -3418,7 +3419,23 @@
                 .attr("x",0)
                 .attr("y",yScale_box(thresholds.threshold_low));
                 
-            }    
+            }   
+            
+            // update optimal marker
+            if(display_metric == "Mass Error (ppm)" || display_metric == "Mass Error (mDa)"){
+                var marker = 0;
+            }
+            else{
+                var marker = 1;
+            }
+
+            d3.select("#optimal_marker")
+            .transition()
+            .duration(1000)
+            .attr("x1", 0)
+            .attr("y1", yScale_box(marker))
+            .attr("x2", boxChartWidth)
+            .attr("y2", yScale_box(marker));
     }
 
         function controlDouble(el){
@@ -4068,11 +4085,61 @@
             .attr("transform", function(d) { return "translate(" + xScale_par(d) + ")"; })
             .each(function(d) { d3.select(this).call(d3.axisLeft().tickSize(2*currentRadius).ticks(5).scale(yScales[d])); })
             .attr("class", "parAxes")
-            .style("opacity", 0.7)
-            .on("mouseover", function(event,d){
-                console.log("Axes");
+            .style('font-size', '1.8vh')
+            .style('stroke-width', '0.4vh')
+            .attr("cursor", "pointer")
+            .on("mouseover", function(event, d){
+                var tooltip = d3.select("#tooltip");
+                if(!axesExpand[d]){
+                    var tool_text = "Click to Expand Axis";
+                }else{
+                    var tool_text = "Click to Reset Axis";
+                }
+                tooltip.html(tool_text);
+                tooltip.style('left', (event.pageX - 10*v_height_unit) + 'px');
+                tooltip.style('top', (event.pageY - 5*v_height_unit) + 'px');
+                tooltip.style("visibility", "visible");
+
             })
-            .style('font-size', '1.8vh');
+            .on("mouseout", function(event){
+                var tooltip = d3.select("#tooltip");
+                tooltip.style("visibility", "hidden");
+            })
+            .on("click", function(event, metric){
+                    
+                    // get values at metric
+                    var yValues = [];
+                    var metricCircles = d3.selectAll(".point").filter(function(e){
+                        if(e.x == metric){
+                            yValues.push(e.y);
+                            return e.y;
+                        }
+                    });
+
+                    if(!axesExpand[metric]){
+                        // change y scale domain (expand)
+                        var offsetY = (4*currentRadius/height)*(d3.max(yValues)-d3.min(yValues));
+                        yScales[metric].domain([d3.min(yValues) -offsetY, d3.max(yValues) + offsetY]);
+                        axesExpand[metric] =true;
+                    }
+                    else{ // contract
+                        yScales[metric].domain(getDomain(metric));
+                        axesExpand[metric] = false;
+                    }
+
+                    // redraw circles
+                    d3.selectAll(".point").transition().duration(1000)
+                    .attr("cy", d => yScales[d.x](d.y));
+
+                    // redraw lines
+                    d3.selectAll(".lines").transition().duration(1000)
+                    .attr("d", path);
+
+                    // axis
+                    d3.selectAll(".parAxes")
+                    .each(function(d) { d3.select(this).transition().duration(1000)
+                        .call(d3.axisLeft().tickSize(2*currentRadius).ticks(5).scale(yScales[d])); });
+                });
 
             // get and draw path data
             for(let i in machine_data.components){
@@ -4182,55 +4249,33 @@
                 })
                 .on("mouseover", function(event, d){
                     var tooltip = d3.select("#tooltip");
-                    if(!axesExpand[d.x]){
-                        var tool_text = "Click to Expand Axis";
-                    }else{
-                        var tool_text = "Click to Reset Axis";
+                    var miss = machine_data.components[d.comp].lcms_metrics[display_metric].missing;
+                    if(miss.includes(d.index)){
+                        var tooltipHTML = "<strong>" + machine_data.components[d.comp].component_name.replace("_", " ") + 
+                                        "</strong><br>" + machine_data.run_data[run_index].date_time.toDateString() + "<br>" +
+                                            get_time(machine_data.run_data[run_index].date_time) +  "<br><strong>" +
+                                            "NO VALUE" + "</strong>";
+                    } else{
+                        var tooltipHTML = "<strong>" + machine_data.components[d.comp].component_name.replace("_", " ") + 
+                                        "</strong><br>" + machine_data.run_data[run_index].date_time.toDateString() + "<br>" +
+                                            get_time(machine_data.run_data[run_index].date_time) +  "<br><strong>" +
+                                            Number.parseFloat(d.y).toFixed(3) + "</strong>";
                     }
-                    tooltip.html(tool_text);
-                    tooltip.style('left', (event.pageX - 10*v_height_unit) + 'px');
-                    tooltip.style('top', (event.pageY - 5*v_height_unit) + 'px');
+                    tooltip.html(tooltipHTML);
+                    tooltip.style('left', (event.pageX+10) + 'px');
+                    tooltip.style('top', (event.pageY+10) + 'px');
                     tooltip.style("visibility", "visible");
 
                 })
-                .on("mouseout", function(event){
+                .on("mouseout", function(event, d){
                     var tooltip = d3.select("#tooltip");
+                    tooltip.style('left', '0px');
+                    tooltip.style('top', '0px');
                     tooltip.style("visibility", "hidden");
                 })
                 .on("click", function(event, d){
-        
-                    // get values at metric
-                    var yValues = [];
-                    var metricCircles = d3.selectAll(".point").filter(function(e){
-                        if(e.x == d.x){
-                            yValues.push(e.y);
-                            return e.y;
-                        }
-                    });
-
-                    if(!axesExpand[d.x]){
-                        // change y scale domain (expand)
-                        var offsetY = (4*currentRadius/height)*(d3.max(yValues)-d3.min(yValues));
-                        yScales[d.x].domain([d3.min(yValues) -offsetY, d3.max(yValues) + offsetY]);
-                        axesExpand[d.x] =true;
-                    }
-                    else{ // contract
-                        yScales[d.x].domain(getDomain(d.x));
-                        axesExpand[d.x] = false;
-                    }
-
-                    // redraw circles
-                    d3.selectAll(".point").transition().duration(1000)
-                    .attr("cy", d => yScales[d.x](d.y));
-
-                    // redraw lines
-                    d3.selectAll(".lines").transition().duration(1000)
-                    .attr("d", path);
-
-                    // axis
-                    d3.selectAll(".parAxes")
-                    .each(function(d) { d3.select(this).transition().duration(1000)
-                        .call(d3.axisLeft().tickSize(2*currentRadius).ticks(5).scale(yScales[d])); });
+                    comp_index = d.comp;
+                    draw_chromatogram(true);
                 });
             }
 
@@ -4361,7 +4406,7 @@
                 .transition().duration(500).style("opacity", 1);
 
                 d3.selectAll(".parAxes").style("opacity", 0)
-                .transition().duration(500).style("opacity", 0.7);
+                .transition().duration(500).style("opacity",  1);
 
                 d3.selectAll(".lineText").style("opacity", 0)
                 .transition().duration(500).style("opacity", 1);
@@ -4476,7 +4521,7 @@
             .attr("transform", function(d) { return "translate(" + xScale_par_ms2(d) + ")"; })
             .each(function(d) { d3.select(this).call(d3.axisLeft().tickSize(2*currentRadius).ticks(8).scale(yScales_ms2[d])); })
             .attr("class", "parAxes")
-            .style("opacity", 0.7)
+            .style("stroke-width", "0.4vh")
             .style('font-size', '1.8vh');
 
             // get and draw path data
@@ -4535,6 +4580,24 @@
                     return d.colour; //'url(#circleGradLight'+d.comp+')'; 
                 } 
             })
+            .on("mouseover", function(event,d){
+                var tooltip = d3.select("#tooltip");
+                if(d.x == "Precursor Mass Error"){
+                    var ms2_value = d.y.toFixed(2);
+                }
+                else{
+                    var ms2_value = d.y;
+                }
+                tooltip.html(ms2_value);
+                tooltip.style('left', (event.pageX - 10*v_height_unit) + 'px');
+                tooltip.style('top', (event.pageY - 5*v_height_unit) + 'px');
+                tooltip.style("visibility", "visible");
+            })
+            .on("mouseout", function(event){
+                var tooltip = d3.select("#tooltip");
+                tooltip.style("visibility", "hidden");
+            });
+
             
             // add metric names (dont set x and y to rotate, put in translate)
             svg.selectAll("metricnames")
@@ -4654,7 +4717,7 @@
                 .transition().duration(500).style("opacity", 1);
 
                 d3.selectAll(".parAxes").style("opacity", 0)
-                .transition().duration(500).style("opacity", 0.7);
+                .transition().duration(500).style("opacity", 1);
 
                 d3.selectAll(".lineText").style("opacity", 0)
                 .transition().duration(500).style("opacity", 1);
@@ -7337,6 +7400,25 @@
                     .attr("d", area)
                     //.attr("filter", "url(#diffuse)")
                     .attr("cursor", "pointer")
+                    .on("mouseover", function(event){
+                        // set tooltip
+                        if(!(chromExpand)){
+                            var chrom_text = "Click to Scale to Peak";
+                        }
+                        else{
+                            var chrom_text = "Click to Normalise Peaks";
+                        }
+                        var tooltip = d3.select("#tooltip");
+                        tooltip.html(chrom_text);
+                        tooltip.style('left', (event.pageX + 10) + 'px');
+                        tooltip.style('top', (event.pageY + 10) + 'px');
+                        tooltip.style("visibility", "visible");
+
+                    })
+                    .on("mouseout", function(event){
+                        var tooltip = d3.select("#tooltip");
+                        tooltip.style("visibility", "hidden");
+                    })
                     .on("click", function(event, d){
                         // reset
                         if(chromExpand){
@@ -8415,6 +8497,7 @@
                           left: 4*v_width_unit};
             var width = plot_width - margin.left - margin.right;
             var height = plot_height - margin.top - margin.bottom;
+            boxChartWidth = plot_width - margin.left - margin.right; // global for transition
             
             // boxwidth
             var box_padding = v_width_unit;
@@ -8831,7 +8914,7 @@
                 .attr("y2", yScale_box(marker))
                 .attr("stroke", "var(--dark)")
                 .attr("stroke-width", 2*base_line_width)
-                .attr("opacity", 0); // bloceked atm
+                .attr("opacity", 1); 
             }
 
             // add the boxes
@@ -8858,11 +8941,19 @@
                 .on("mouseover", function(event, d){
                     // tooltip
                     var tooltip = d3.select("#tooltip");
+
+                    // focus/reset text
+                    if(d.index != boxExpand){
+                        var click_text = "Click to Focus";
+                    }
+                    else{
+                        var click_text = "Click to Reset";
+                    }
                     var tooltipHTML = "<strong>" + d.name + "</strong><br>" +
                                     "<strong>Q1 </strong>" + d["25_percent"].toFixed(3) + "<br>" +
                                     "<strong>Q3 </strong>" + d["75_percent"].toFixed(3) + "<br>" +
                                     "<strong>Median </strong>" + d["50_percent"].toFixed(3) + "<br>" +
-                                    "<strong>Mean </strong>" + d["mean"].toFixed(3);
+                                    "<strong>Mean </strong>" + d["mean"].toFixed(3)+ "<br>" + click_text;
                                         
                     tooltip.html(tooltipHTML);
                     tooltip.style('left', (event.pageX+30) + 'px');
