--- a/mpmf-server/views/partials/metab-head.ejs
+++ b/mpmf-server/views/partials/metab-head.ejs
@@ -1508,7 +1508,7 @@
                     var spanHTML = "<span id='chromClose' class='fas fa-window-close closeButton'></span>";
                     tooltipHTML += spanHTML;
                 }
-                return "<strong>" + comp_name + "</strong></br>" + tooltipHTML;
+                return "<strong style='background-color:var(--dark); color:white; padding:5px; padding-left:20px;padding-right:20px;'>" + comp_name + "</strong></br>" + tooltipHTML;
             }
 
             
@@ -1932,12 +1932,17 @@
                     tooltipHTML += new_html;
             }
 
+            // add info text for hold
+            if(!(pressureModal)){
+                tooltipHTML += "CLICK TO OPEN";
+            }
+
             // add close button
             if(pressureModal){
                 var spanHTML = "<span id='pressureClose' class='fas fa-window-close closeButton'></span>";
                 tooltipHTML += spanHTML;
             }
-            return "<strong>" + "MAIN PUMP" + "</strong></br>" + tooltipHTML;
+            return "<strong style='background-color:var(--dark); color:white; padding:5px; padding-left:20px;padding-right:20px;'>" + "MAIN PUMP" + "</strong></br></br>" + tooltipHTML;
         }
             
             // Function that updates the chart for given boundaries
