Handle session storage for navbar

--- a/mpmf-server/views/partials/metab-head.ejs
+++ b/mpmf-server/views/partials/metab-head.ejs
@@ -157,7 +157,9 @@
         // get machine data from controller
         let machine_data = <%-JSON.stringify(ejs_machine_data)%>;
 
-        //
+        // get all machine names from storage for nav bar
+        var proteomics = JSON.parse(sessionStorage.getItem("proteomics-machines"));
+        var metabolomics = JSON.parse(sessionStorage.getItem("metabolomics-machines"));
         
         // state variables
         let run_index = 0; 
