--- a/mpmf-server/views/partials/navbar-head.ejs
+++ b/mpmf-server/views/partials/navbar-head.ejs
@@ -8,7 +8,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item"> <a id="prccessNav" class="nav-link menu" href="#" data-process="true" data-tooltip="Run quality control processing"><span class="fas fa-flask"></span> Process</a> </li>
+              <li class="nav-item" id="processItem"> <a id="prccessNav" class="nav-link menu" href="#" data-process="true" data-tooltip="Run quality control processing"><span class="fas fa-flask"></span> Process</a> </li>
               <li class="nav-item"> 
                 <a class="nav-link menu" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="fas fa-angle-down"></span> Instruments</a> 
