--- a/mpmf-server/views/partials/navbar.ejs
+++ b/mpmf-server/views/partials/navbar.ejs
@@ -26,7 +26,7 @@
               </li>
           
 
-            <li class="nav-item"> <a id="prccessNav" class="nav-link menu" href="#" data-process="true" data-tooltip="Run quality control processing"><span class="fas fa-flask"></span> Process</a> </li>
+            <li class="nav-item" id="processItem"> <a id="prccessNav" class="nav-link menu" href="#" data-process="true" data-tooltip="Run quality control processing"><span class="fas fa-flask"></span> Process</a> </li>
             <!--
             <li class="nav-item"> 
               <a class="nav-link menu" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
