--- a/mpmf-server/views/partials/nodata-head.ejs
+++ b/mpmf-server/views/partials/nodata-head.ejs
@@ -22,8 +22,8 @@
         // DOM loaded callback
 		document.addEventListener('DOMContentLoaded', function() {
 
-            // remove processing for linux
-            if(os_type !== "win32"){
+            // remove processing for mac or other
+            if(os_type !== "win32" && os_type !== "linux"){
                 document.getElementById("processItem").style.display = "none";
             }
 
