--- a/mpmf-server/views/partials/user-head.ejs
+++ b/mpmf-server/views/partials/user-head.ejs
@@ -38,7 +38,7 @@
                 user_link.setAttribute("data-user", "process");
             }
 
-            // remove processing for linux
+            // remove processing for mac or other
             if(os_type !== "win32"){
                 document.getElementById("processItem").style.display = "none";
             }
