--- a/mpmf-server/views/partials/config-head.ejs
+++ b/mpmf-server/views/partials/config-head.ejs
@@ -146,8 +146,8 @@
                 link.innerHTML = "<span class='fas fa-wrench'></span> Proteomics";
             }
 
-            // remove processing for linux
-            if(os_type !== "win32"){
+            // remove processing for mac or other
+            if(os_type !== "win32" && os_type !== "linux"){
                 document.getElementById("processItem").style.display = "none";
             }
             
