--- a/mpmf-server/views/partials/custom-head.ejs
+++ b/mpmf-server/views/partials/custom-head.ejs
@@ -139,8 +139,8 @@
             load_metabolomics();
             load_proteomics();
 
-           // remove processing for linux
-            if(os_type !== "win32"){
+           // remove processing for mac or other
+            if(os_type !== "win32" && os_type !== "linux"){
                 document.getElementById("processItem").style.display = "none";
             }
             
